criamos as telas de login e de cadastro

--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -31,7 +31,7 @@
                                     </a>
                                     <span class="card__tag">Estrelas</span>
                                     <div class="card__info">
-                                        <p class="card__titulo">{{ fotografia.nome }}</p>  
+                                        <p class="card__titulo">{{ fotografia.nome }}</p>  <!-- Corrigido para minúsculo -->
                                         <div class="card__texto">
                                             <p class="card__descricao">{{ fotografia.legenda }}</p>
                                             <span>
@@ -43,7 +43,7 @@
                             {% endfor %}
                             {% else %}
                             <div class="imagem_texto">
-                                <p>Fotografias não encontradas</p>
+                                <p style="color: white;">Fotografias não encontradas</p>
                             </div>
                             {% endif %}
                         </ul>
